create RestExceptionHandler, adjust exceptions, create UuidGenerator